# GPUMonitorStatusbar

./: .gitignore  LICENSE  README.md  pyproject.toml
src/GPUMonitorStatusbar/: __init__.py  app.py  main.py
